@@ -7,6 +7,12 @@
 	does not overflow the space allocated for it based on dimensions 
 	calculated when the input file was first opened.
 
+	* src/plot3d.c (eval_3dplots):  Skip empty input file cleanly, as we
+	already do for 2D plots.
+
+	* src/datafile.c (df_open):  Filename of the form "+file.dat" must not
+	be mistaken for special file '+'.
+
 2015-07-13  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/wxt_gui.cpp term/cairo.trm term/wxt.trm:
